# ChangeLog for x11-drivers/xf86-video-openchrome
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-openchrome/ChangeLog,v 1.37 2011/04/14 18:44:48 jer Exp $

*xf86-video-openchrome-0.2.904_p918 (14 Apr 2011)

  14 Apr 2011; Jeroen Roovers <jer@gentoo.org>
  +xf86-video-openchrome-0.2.904_p918.ebuild:
  Version bump.

  28 Feb 2011; Michał Górny <mgorny@gentoo.org>
  xf86-video-openchrome-0.2.904_p909.ebuild,
  xf86-video-openchrome-0.2.904_p916.ebuild:
  Replace DOCS var with an array due to xorg-2 eclass changes.

*xf86-video-openchrome-0.2.904_p916 (21 Feb 2011)

  21 Feb 2011; Jeroen Roovers <jer@gentoo.org>
  -xf86-video-openchrome-0.2.904_p906.ebuild,
  +xf86-video-openchrome-0.2.904_p916.ebuild:
  Version bump.

*xf86-video-openchrome-0.2.904_p909 (26 Jan 2011)

  26 Jan 2011; Jeroen Roovers <jer@gentoo.org>
  -xf86-video-openchrome-0.2.904_p879.ebuild,
  -xf86-video-openchrome-0.2.904_p891.ebuild,
  +xf86-video-openchrome-0.2.904_p909.ebuild:
  Version bump.

*xf86-video-openchrome-0.2.904_p906 (22 Jan 2011)

  22 Jan 2011; Jeroen Roovers <jer@gentoo.org>
  -xf86-video-openchrome-0.2.904_p904.ebuild,
  +xf86-video-openchrome-0.2.904_p906.ebuild:
  Version bump. Do not ship precompiled binaries (bug #352223).

*xf86-video-openchrome-0.2.904_p904 (18 Jan 2011)

  18 Jan 2011; Jeroen Roovers <jer@gentoo.org>
  +xf86-video-openchrome-0.2.904_p904.ebuild:
  Version bump.

*xf86-video-openchrome-0.2.904_p891 (28 Dec 2010)

  28 Dec 2010; Jeroen Roovers <jer@gentoo.org>
  -xf86-video-openchrome-0.2.904_p860.ebuild,
  +xf86-video-openchrome-0.2.904_p891.ebuild:
  Version bump.

*xf86-video-openchrome-0.2.904_p879 (24 Nov 2010)

  24 Nov 2010; Jeroen Roovers <jer@gentoo.org>
  -xf86-video-openchrome-0.2.904_p855.ebuild,
  -xf86-video-openchrome-0.2.904_p856.ebuild,
  +xf86-video-openchrome-0.2.904_p879.ebuild:
  Version bump.

*xf86-video-openchrome-0.2.904_p860 (02 Nov 2010)
