@@ -4,15 +4,17 @@ Hash: SHA1
 DIST xf86-video-openchrome-0.2.904.tar.bz2 460051 RMD160 8d000e210cb3c0443755f5567ed315e81eababf3 SHA1 23225057d5b75d6aac3e7a710cbc067b2eb29228 SHA256 c7bdf7c48365b1d077a4be7ccc652cf3f7a0f385fddeb2d4fe71b00b6c6b7aea
 DIST xf86-video-openchrome-0.2.904_p916.tar.bz2 231286 RMD160 bf7b769af0e0e7463e37c92696e0f1ada7fd895e SHA1 0df57f188cf17e0faf46c7ad8f80a3fb996f05ec SHA256 4b7458c437e91471260061926f2aabdc606d6ffa69e4e9a65b2c15b9f2f6e494
 DIST xf86-video-openchrome-0.2.904_p918.tar.bz2 231089 RMD160 d12f046cd44c873a0ba6c6a45b5334132addb613 SHA1 93b968a260369244473967d349b392efb37f2443 SHA256 f28f85b90e1ddb8f7215705cc1ef036bc3f641c1550210754c9b7d8483037446
+DIST xf86-video-openchrome-0.2.904_p919.tar.bz2 231260 RMD160 8c258e8a96be3b2f58d7a2bf2cf8d83697cef845 SHA1 71ee8366d0033605783e2e14005a74964675f39d SHA256 85a62a69d300b64224ec43efcfb4938c98cdec93e732aeab01d38e722616592f
 EBUILD xf86-video-openchrome-0.2.904.ebuild 1379 RMD160 f8ceeec711b7e88630d08d440a7db1621748357a SHA1 3653564deb3955c1919fe20bca181a412dfc1127 SHA256 8ceb81e4f3892a052f0e08724dc088cd8c75f3185aa2afa69e40f94d61941d9f
 EBUILD xf86-video-openchrome-0.2.904_p916.ebuild 1339 RMD160 7d60026b5e0c8639c11abfeacc40658e21e42a3e SHA1 06f771a78fa8a62beebcaff005b255eb4ef16315 SHA256 af10bb4fec04ee5335cf653e4989e8b7d92ea993a6892c7e895038a5a238eff1
 EBUILD xf86-video-openchrome-0.2.904_p918.ebuild 1336 RMD160 6f88907d285062219410193c8b30d37cd6ac45d0 SHA1 1597a26d5ab3e82b538555210be3be648c6867ef SHA256 b1b815059fac6374c147bd4efa535f575ed4c1b554a5de2fb538145e54a21378
-MISC ChangeLog 6598 RMD160 16ea358d0afd9576e8a03552c6dc1ef2e7bc9429 SHA1 3c00d6730fb901f3065b6fd6ad748fe88d3a3aad SHA256 f3fae5a25aafacadc652142263860e4ba325c1c64d69fbfd0fb5026495a05454
+EBUILD xf86-video-openchrome-0.2.904_p919.ebuild 1336 RMD160 278db98aab92a49a72dc55222fe859f9b9b66e53 SHA1 12f5bc8eb45b3ebf686700cd028e86ae122b155e SHA256 f877a8f1f89f1e76be1aabd8463228a9fdb8a1f3a03adb7a5c0ccd19214056fa
+MISC ChangeLog 6759 RMD160 7b51f83c09c295ac2934c22bd89f2ca5323c2cfb SHA1 af313de55ebe614ef10418f00f67d2113aca4cdf SHA256 d8b82f697b8442a18ccff4fc748eb1c32054161cdbeca115debeb0eae5782ebf
 MISC metadata.xml 252 RMD160 ed7e3d6637ec96975f17ce5c33628aa482dfd663 SHA1 ddd00321e20f4a53a140eeb56cb01b9fab24d657 SHA256 76fd24f00e95b2892ca60acdce02d8c85dfeff84fc89ca14ffdbc00b82de44b3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2nQKoACgkQVWmRsqeSphOl5gCePGML0QolduhkGDjHaEkR1x9y
-jcAAn0pzEpiXE+Ar25gVUFa/yql1BZ6O
-=Mvng
+iEYEARECAAYFAk22Mi8ACgkQVWmRsqeSphNNUwCfRALuGmYtxwbjMj2jprb60k8U
+9yQAn3eJMOuKAbA0b9nedYikG2SBZBJh
+=Kv/1
 -----END PGP SIGNATURE-----
