@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-openchrome
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-openchrome/ChangeLog,v 1.37 2011/04/14 18:44:48 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-openchrome/ChangeLog,v 1.38 2011/04/26 02:47:05 jer Exp $
+
+*xf86-video-openchrome-0.2.904_p919 (26 Apr 2011)
+
+  26 Apr 2011; Jeroen Roovers <jer@gentoo.org>
+  +xf86-video-openchrome-0.2.904_p919.ebuild:
+  Version bump.
 
 *xf86-video-openchrome-0.2.904_p918 (14 Apr 2011)
 
